fix: horizontal scrolling

--- a/PawsAndClaws/wwwroot/css/output.css
+++ b/PawsAndClaws/wwwroot/css/output.css
@@ -1151,6 +1151,10 @@ video {
   overflow-y: auto;
 }
 
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
 .rounded-2xl {
   border-radius: 1rem;
 }
